--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                     <div class="home__info">
                         <div>
-                            <span class="home__info-title">best places to visit tuguegarao</span>
+                            <span class="home__info-title">Best places to visit tuguegarao</span>
                             <a href="https://www.tripadvisor.com.ph/Attractions-g1104131-Activities-Tuguegarao_City_Cagayan_Province_Cagayan_Valley_Region_Luzon.html" class="button button--flex button--link home__info-button">
                                 More <i class="ri-arrow-right-line"></i>
                             </a>
@@ -100,8 +100,7 @@
                         <h2 class="section__title about__title">More Information <br> About The Best place in tuguegarao</h2>
                         <p class="about__description"> The Callao Cave is now considered one of the world's most significant archeological 
 						sites after a human foot bone and twelve (12) other human remains were discovered in 2017
-						near the cave entrance while Buntun Bride is a river bridge that stretches from Tuguegarao City to Solana in Cagayan and spans the Cagayan River, the largest river basin in the Philippines..
-						near the cave entrance while Buntun Bride is a river bridge that stretches from Tuguegarao City to Solana in Cagayan and spans the Cagayan River, the largest river basin in the Philippines..
+						near the cave entrance while Buntun Bride is a river bridge that stretches from Tuguegarao City to Solana in Cagayan and spans the Cagayan River, the largest river basin in the Philippines.
                         </p>
                         <a href="https://funcagayan.wordpress.com/about/cave/callao-cave/" class="button">Subscribe</a>
                     </div>
